KEYCLOAK-9023 Add support for Java 11 to the testsuite